<resources>
    <string name="app_name">ChoreWheel</string>
    <!-- Add Task Fragment -->
    <string name="add_task_fragment_title">Add Task</string>
    <string name="add_task_fragment_task_name">Task Name:</string>
    <string name="add_task_fragment_task_for">Task For:</string>
    <string name="add_task_fragment_task_due">Due by:</string>
    <string name="add_task_fragment_task_notes">Notes:</string>
    <!-- Info/Edit Task Fragment -->
    <string name="info_task_fragment_title">Task Info</string>
    <string name="info_task_fragment_button_save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit Profile</string>
</resources>